--- a/index.html
+++ b/index.html
@@ -7,10 +7,26 @@
         <link rel="stylesheet" href="css/styles.css">
     </head>
 
+
     <body>
 
+        <header>
+            <navbar>
+                <a href="#">About Me</a>
+                <a href="#">Skills</a>
+                <a href="#">Projects</a>
+                <a href="#">Contact</a>
+            </navbar>
 
+        </header>
 
+        <main>
+
+        </main>
+
+        <footer>
+
+        </footer>
 
     </body>
 
