added skeleton sections About Me, Skills, Projects, Contact

--- a/index.html
+++ b/index.html
@@ -11,16 +11,48 @@
     <body>
 
         <header>
-            <navbar>
-                <a href="#">About Me</a>
-                <a href="#">Skills</a>
-                <a href="#">Projects</a>
-                <a href="#">Contact</a>
-            </navbar>
+            <div class="container">
+                <div><a href="#">About Me</a></div>
+                <div><a href="#">Skills</a></div>
+                <div><a href="#">Projects</a></div>
+                <div><a href="#">Contact</a></div>
+            </div>
 
         </header>
 
         <main>
+            <div id="about-me">
+                <img src="#" alt="Wendy picture">
+                <h2>Bio</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur nulla erat, vel imperdiet sapien dapibus nec. Vestibulum sit amet ex eu nibh porttitor imperdiet. Nam ex lacus, aliquet nec ornare vitae, pellentesque ac ante. Etiam non tempor velit, nec ullamcorper odio. Curabitur posuere lorem id metus accumsan, ac cursus nisi porttitor. Etiam orci massa, rhoncus in dignissim sed, semper eu odio. Nam ac ligula odio. Donec hendrerit molestie dui sed lacinia. Quisque et risus ultricies, interdum nibh nec, rutrum arcu. Etiam id lacus porttitor justo commodo auctor. Sed vel urna vulputate, viverra ligula sit amet, eleifend massa. Nam vel urna felis. Aenean a iaculis mauris. In hac habitasse platea dictumst. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae.</p>
+
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce consectetur, arcu in pulvinar consequat, massa odio vehicula est, vitae aliquam tellus turpis vel massa. Proin congue a quam ut finibus. Mauris a posuere orci, in porta neque. Nunc sed odio in nulla dignissim consectetur. Cras laoreet lorem diam, sollicitudin consectetur purus congue posuere. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed fringilla erat eu sapien laoreet, non laoreet nunc pretium. Aenean condimentum fringilla metus vitae consequat. Praesent id enim eu orci eleifend scelerisque. Fusce pharetra gravida commodo. Sed ipsum velit, consectetur eu blandit et, consequat a enim. Proin condimentum arcu non sapien viverra aliquet.</p>
+                    
+                <p>Ut vel facilisis mauris, vel ornare nulla. Aliquam sed sagittis augue. Fusce pretium lorem elit, nec vulputate eros mollis et. In blandit sapien at porttitor lobortis. In eu enim ac lectus egestas pretium. Phasellus blandit diam sed magna convallis eleifend. Aliquam felis libero, molestie ut magna nec, venenatis efficitur enim. Cras tristique dolor eget erat placerat, quis iaculis nunc ultrices. Maecenas a aliquet est, vitae facilisis tellus.</p>
+                   
+            </div>
+
+            <div id="skills">
+                <h2>Skills</h2>
+                <div>HTML/CSS Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur nulla erat, vel imperdiet sapien dapibus nec. Vestibulum sit amet ex eu nibh porttitor imperdiet. Nam ex lacus, aliquet nec ornare vitae, pellentesque ac ante. Etiam non tempor velit, nec ullamcorper odio. Curabitur posuere lorem id metus accumsan, ac cursus nisi porttitor. Etiam orci massa, rhoncus in dignissim sed, semper eu odio. Nam ac ligula odio. </div>
+                <div>Javascript Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur nulla erat, vel imperdiet sapien dapibus nec. Vestibulum sit amet ex eu nibh porttitor imperdiet. Nam ex lacus, aliquet nec ornare vitae, pellentesque ac ante. Etiam non tempor velit, nec ullamcorper odio. Curabitur posuere lorem id metus accumsan, ac cursus nisi porttitor. Etiam orci massa, rhoncus in dignissim sed, semper eu odio. Nam ac ligula odio. </div>
+                <div>React Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur nulla erat, vel imperdiet sapien dapibus nec. Vestibulum sit amet ex eu nibh porttitor imperdiet. Nam ex lacus, aliquet nec ornare vitae, pellentesque ac ante. Etiam non tempor velit, nec ullamcorper odio. Curabitur posuere lorem id metus accumsan, ac cursus nisi porttitor. Etiam orci massa, rhoncus in dignissim sed, semper eu odio. Nam ac ligula odio. </div>
+                <div>Java Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur nulla erat, vel imperdiet sapien dapibus nec. Vestibulum sit amet ex eu nibh porttitor imperdiet. Nam ex lacus, aliquet nec ornare vitae, pellentesque ac ante. Etiam non tempor velit, nec ullamcorper odio. Curabitur posuere lorem id metus accumsan, ac cursus nisi porttitor. Etiam orci massa, rhoncus in dignissim sed, semper eu odio. Nam ac ligula odio. </div>
+                <div>Python Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur nulla erat, vel imperdiet sapien dapibus nec. Vestibulum sit amet ex eu nibh porttitor imperdiet. Nam ex lacus, aliquet nec ornare vitae, pellentesque ac ante. Etiam non tempor velit, nec ullamcorper odio. Curabitur posuere lorem id metus accumsan, ac cursus nisi porttitor. Etiam orci massa, rhoncus in dignissim sed, semper eu odio. Nam ac ligula odio. </div>
+
+            </div>
+
+
+            <div id="projects">
+                <h2>Projects</h2>
+
+            </div>
+
+            <div id="contact">
+                <h2>Contact</h2>
+
+            </div>
+
 
         </main>
 
