--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </header>
 
         <main>
-            <div id="about-me">
+            <section id="about-me">
                 <img src="#" alt="Wendy picture">
                 <h2>Bio</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur nulla erat, vel imperdiet sapien dapibus nec. Vestibulum sit amet ex eu nibh porttitor imperdiet. Nam ex lacus, aliquet nec ornare vitae, pellentesque ac ante. Etiam non tempor velit, nec ullamcorper odio. Curabitur posuere lorem id metus accumsan, ac cursus nisi porttitor. Etiam orci massa, rhoncus in dignissim sed, semper eu odio. Nam ac ligula odio. Donec hendrerit molestie dui sed lacinia. Quisque et risus ultricies, interdum nibh nec, rutrum arcu. Etiam id lacus porttitor justo commodo auctor. Sed vel urna vulputate, viverra ligula sit amet, eleifend massa. Nam vel urna felis. Aenean a iaculis mauris. In hac habitasse platea dictumst. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae.</p>
@@ -30,9 +30,9 @@
                     
                 <p>Ut vel facilisis mauris, vel ornare nulla. Aliquam sed sagittis augue. Fusce pretium lorem elit, nec vulputate eros mollis et. In blandit sapien at porttitor lobortis. In eu enim ac lectus egestas pretium. Phasellus blandit diam sed magna convallis eleifend. Aliquam felis libero, molestie ut magna nec, venenatis efficitur enim. Cras tristique dolor eget erat placerat, quis iaculis nunc ultrices. Maecenas a aliquet est, vitae facilisis tellus.</p>
                    
-            </div>
+            </section>
 
-            <div id="skills">
+            <section id="skills">
                 <h2>Skills</h2>
                 <div>HTML/CSS Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur nulla erat, vel imperdiet sapien dapibus nec. Vestibulum sit amet ex eu nibh porttitor imperdiet. Nam ex lacus, aliquet nec ornare vitae, pellentesque ac ante. Etiam non tempor velit, nec ullamcorper odio. Curabitur posuere lorem id metus accumsan, ac cursus nisi porttitor. Etiam orci massa, rhoncus in dignissim sed, semper eu odio. Nam ac ligula odio. </div>
                 <div>Javascript Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur nulla erat, vel imperdiet sapien dapibus nec. Vestibulum sit amet ex eu nibh porttitor imperdiet. Nam ex lacus, aliquet nec ornare vitae, pellentesque ac ante. Etiam non tempor velit, nec ullamcorper odio. Curabitur posuere lorem id metus accumsan, ac cursus nisi porttitor. Etiam orci massa, rhoncus in dignissim sed, semper eu odio. Nam ac ligula odio. </div>
@@ -40,18 +40,36 @@
                 <div>Java Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur nulla erat, vel imperdiet sapien dapibus nec. Vestibulum sit amet ex eu nibh porttitor imperdiet. Nam ex lacus, aliquet nec ornare vitae, pellentesque ac ante. Etiam non tempor velit, nec ullamcorper odio. Curabitur posuere lorem id metus accumsan, ac cursus nisi porttitor. Etiam orci massa, rhoncus in dignissim sed, semper eu odio. Nam ac ligula odio. </div>
                 <div>Python Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur nulla erat, vel imperdiet sapien dapibus nec. Vestibulum sit amet ex eu nibh porttitor imperdiet. Nam ex lacus, aliquet nec ornare vitae, pellentesque ac ante. Etiam non tempor velit, nec ullamcorper odio. Curabitur posuere lorem id metus accumsan, ac cursus nisi porttitor. Etiam orci massa, rhoncus in dignissim sed, semper eu odio. Nam ac ligula odio. </div>
 
-            </div>
+            </section>
 
 
-            <div id="projects">
+            <section id="projects">
                 <h2>Projects</h2>
+                <div id="container">
+                    <div class="card">
+                        <div class="img"><img src="#" alt="Google Translate UI image"></div>
+                        <p class="description">Google Translate UI Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur nulla erat, vel imperdiet sapien dapibus nec. Vestibulum sit amet ex eu nibh porttitor imperdiet. Nam ex lacus, aliquet nec ornare vitae, pellentesque ac ante.</p>
+                    </div>
+                    <div class="card">
+                        <div class="img"><img src="#" alt="Cupcake Lorem Ipsum image"></div>
+                        <p class="description">Cupcake Lorem Ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur nulla erat, vel imperdiet sapien dapibus nec. Vestibulum sit amet ex eu nibh porttitor imperdiet. Nam ex lacus, aliquet nec ornare vitae, pellentesque ac ante.</p>
+                    </div>
+                    <div class="card">
+                        <div class="img"><img src="#" alt="ChatGPT Login & Signup image"></div>
+                        <p class="description">ChatGPT Login & Signup Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur nulla erat, vel imperdiet sapien dapibus nec. Vestibulum sit amet ex eu nibh porttitor imperdiet. Nam ex lacus, aliquet nec ornare vitae, pellentesque ac ante.</p>
+                    </div>
+                    <div class="card">
+                        <div class="img"><img src="#" alt="Online Sudoku gaming website image"></div>
+                        <p class="description">Online Sudoku gaming website Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur nulla erat, vel imperdiet sapien dapibus nec. Vestibulum sit amet ex eu nibh porttitor imperdiet. Nam ex lacus, aliquet nec ornare vitae, pellentesque ac ante.</p>
+                    </div>
 
-            </div>
+                </div>
+            </section>
 
-            <div id="contact">
+            <section id="contact">
                 <h2>Contact</h2>
 
-            </div>
+            </section>
 
 
         </main>
