navigation bar meets assignment requirements

--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
     <body>
 
         <header>
-            <div class="container">
-                <div><a href="#">About Me</a></div>
-                <div><a href="#">Skills</a></div>
-                <div><a href="#">Projects</a></div>
-                <div><a href="#">Contact</a></div>
-            </div>
-
+            <nav id="navbar">
+                <ul id="nav-links">
+                    <li><a href="#">About Me</a></li>
+                    <li><a href="#">Skills</a></li>
+                    <li><a href="#">Projects</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
         </header>
 
         <main>
