created media query to make navigation links responsive

--- a/index.html
+++ b/index.html
@@ -26,19 +26,23 @@
                 <div id="pic-container">
                     <img src="images/wendy.jpeg" alt="Wendy pic" id="bio-pic">
                 </div>
-                <h2>Bio</h2>
-                <p class="bio-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur nulla erat, vel imperdiet sapien dapibus nec. Vestibulum sit amet ex eu nibh porttitor imperdiet. Nam ex lacus, aliquet nec ornare vitae, pellentesque ac ante. Etiam non tempor velit, nec ullamcorper odio. Curabitur posuere lorem id metus accumsan, ac cursus nisi porttitor. Etiam orci massa, rhoncus in dignissim sed, semper eu odio. Nam ac ligula odio. Donec hendrerit molestie dui sed lacinia. Quisque et risus ultricies, interdum nibh nec, rutrum arcu. Etiam id lacus porttitor justo commodo auctor. Sed vel urna vulputate, viverra ligula sit amet, eleifend massa. Nam vel urna felis. Aenean a iaculis mauris. In hac habitasse platea dictumst. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae.</p>
+
+                <div id="bio-container">
+                    <h2>Bio</h2>
+                    <p class="bio-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur nulla erat, vel imperdiet sapien dapibus nec. Vestibulum sit amet ex eu nibh porttitor imperdiet. Nam ex lacus, aliquet nec ornare vitae, pellentesque ac ante. Etiam non tempor velit, nec ullamcorper odio. Curabitur posuere lorem id metus accumsan, ac cursus nisi porttitor. Etiam orci massa, rhoncus in dignissim sed, semper eu odio. Nam ac ligula odio. Donec hendrerit molestie dui sed lacinia. Quisque et risus ultricies, interdum nibh nec, rutrum arcu. Etiam id lacus porttitor justo commodo auctor. Sed vel urna vulputate, viverra ligula sit amet, eleifend massa. Nam vel urna felis. Aenean a iaculis mauris. In hac habitasse platea dictumst. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae.</p>
+                </div>
                    
             </section>
 
             <section id="skills">
                 <h2>Skills</h2>
-                <div>HTML/CSS Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur nulla erat, vel imperdiet sapien dapibus nec. Vestibulum sit amet ex eu nibh porttitor imperdiet. Nam ex lacus, aliquet nec ornare vitae, pellentesque ac ante. Etiam non tempor velit, nec ullamcorper odio. Curabitur posuere lorem id metus accumsan, ac cursus nisi porttitor. Etiam orci massa, rhoncus in dignissim sed, semper eu odio. Nam ac ligula odio. </div>
-                <div>Javascript Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur nulla erat, vel imperdiet sapien dapibus nec. Vestibulum sit amet ex eu nibh porttitor imperdiet. Nam ex lacus, aliquet nec ornare vitae, pellentesque ac ante. Etiam non tempor velit, nec ullamcorper odio. Curabitur posuere lorem id metus accumsan, ac cursus nisi porttitor. Etiam orci massa, rhoncus in dignissim sed, semper eu odio. Nam ac ligula odio. </div>
-                <div>React Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur nulla erat, vel imperdiet sapien dapibus nec. Vestibulum sit amet ex eu nibh porttitor imperdiet. Nam ex lacus, aliquet nec ornare vitae, pellentesque ac ante. Etiam non tempor velit, nec ullamcorper odio. Curabitur posuere lorem id metus accumsan, ac cursus nisi porttitor. Etiam orci massa, rhoncus in dignissim sed, semper eu odio. Nam ac ligula odio. </div>
-                <div>Java Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur nulla erat, vel imperdiet sapien dapibus nec. Vestibulum sit amet ex eu nibh porttitor imperdiet. Nam ex lacus, aliquet nec ornare vitae, pellentesque ac ante. Etiam non tempor velit, nec ullamcorper odio. Curabitur posuere lorem id metus accumsan, ac cursus nisi porttitor. Etiam orci massa, rhoncus in dignissim sed, semper eu odio. Nam ac ligula odio. </div>
-                <div>Python Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur nulla erat, vel imperdiet sapien dapibus nec. Vestibulum sit amet ex eu nibh porttitor imperdiet. Nam ex lacus, aliquet nec ornare vitae, pellentesque ac ante. Etiam non tempor velit, nec ullamcorper odio. Curabitur posuere lorem id metus accumsan, ac cursus nisi porttitor. Etiam orci massa, rhoncus in dignissim sed, semper eu odio. Nam ac ligula odio. </div>
-
+                <div id="skills-container">
+                    <div>HTML/CSS Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur nulla erat, vel imperdiet sapien dapibus nec.</div>
+                    <div>Javascript Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur nulla erat, vel imperdiet sapien dapibus nec.</div>
+                    <div>React Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur nulla erat, vel imperdiet sapien dapibus nec.</div>
+                    <div>Java Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur nulla erat, vel imperdiet sapien dapibus nec.</div>
+                    <div>Python Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur nulla erat, vel imperdiet sapien dapibus nec.</div>
+                </div>
             </section>
 
 
