styled skills to wrap and styled h2 tags

--- a/index.html
+++ b/index.html
@@ -37,18 +37,18 @@
             <section id="skills">
                 <h2>Skills</h2>
                 <div id="skills-container">
-                    <div>HTML/CSS Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur nulla erat, vel imperdiet sapien dapibus nec.</div>
-                    <div>Javascript Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur nulla erat, vel imperdiet sapien dapibus nec.</div>
-                    <div>React Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur nulla erat, vel imperdiet sapien dapibus nec.</div>
-                    <div>Java Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur nulla erat, vel imperdiet sapien dapibus nec.</div>
-                    <div>Python Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur nulla erat, vel imperdiet sapien dapibus nec.</div>
+                    <div>HTML/CSS</div>
+                    <div>Javascript</div>
+                    <div>React</div>
+                    <div>Java</div>
+                    <div>Python</div>
                 </div>
             </section>
 
 
             <section id="projects">
                 <h2>Projects</h2>
-                <div id="container">
+                <div id="projects-container">
                     <div class="card">
                         <div class="img"><img src="#" alt="Google Translate UI image"></div>
                         <p class="description">Google Translate UI Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur nulla erat, vel imperdiet sapien dapibus nec. Vestibulum sit amet ex eu nibh porttitor imperdiet. Nam ex lacus, aliquet nec ornare vitae, pellentesque ac ante.</p>
