--- a/index.html
+++ b/index.html
@@ -48,22 +48,22 @@
 
             <section id="projects">
                 <h2>Projects</h2>
-                <div id="projects-container">
+                <div id="card-container">
                     <div class="card">
-                        <div class="img"><img src="#" alt="Google Translate UI image"></div>
-                        <p class="description">Google Translate UI Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur nulla erat, vel imperdiet sapien dapibus nec. Vestibulum sit amet ex eu nibh porttitor imperdiet. Nam ex lacus, aliquet nec ornare vitae, pellentesque ac ante.</p>
+                        <div class="card-img"><img src="images/google.png" alt="Google Translate UI image"></div>
+                        <div class="card-description"></div><p class="description">Google Translate UI<br /> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur nulla erat, vel imperdiet sapien dapibus nec. Vestibulum sit amet ex eu nibh porttitor imperdiet. Nam ex lacus, aliquet nec ornare vitae, pellentesque ac ante.</p></div>
                     </div>
                     <div class="card">
-                        <div class="img"><img src="#" alt="Cupcake Lorem Ipsum image"></div>
-                        <p class="description">Cupcake Lorem Ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur nulla erat, vel imperdiet sapien dapibus nec. Vestibulum sit amet ex eu nibh porttitor imperdiet. Nam ex lacus, aliquet nec ornare vitae, pellentesque ac ante.</p>
+                        <div class="card-img"><img src="images/cupcake-lorem.png" alt="Cupcake Lorem Ipsum image"></div>
+                        <div class="card-description"></div><p class="description">Cupcake Lorem Ipsum<br /> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur nulla erat, vel imperdiet sapien dapibus nec. Vestibulum sit amet ex eu nibh porttitor imperdiet. Nam ex lacus, aliquet nec ornare vitae, pellentesque ac ante.</p></div>
                     </div>
                     <div class="card">
-                        <div class="img"><img src="#" alt="ChatGPT Login & Signup image"></div>
-                        <p class="description">ChatGPT Login & Signup Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur nulla erat, vel imperdiet sapien dapibus nec. Vestibulum sit amet ex eu nibh porttitor imperdiet. Nam ex lacus, aliquet nec ornare vitae, pellentesque ac ante.</p>
+                        <div class="card-img"><img src="images/chatgpt.png" alt="ChatGPT Login & Signup image"></div>
+                        <div class="card-description"></div><p class="description">ChatGPT Login & Signup<br /> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur nulla erat, vel imperdiet sapien dapibus nec. Vestibulum sit amet ex eu nibh porttitor imperdiet. Nam ex lacus, aliquet nec ornare vitae, pellentesque ac ante.</p></div>
                     </div>
                     <div class="card">
-                        <div class="img"><img src="#" alt="Online Sudoku gaming website image"></div>
-                        <p class="description">Online Sudoku gaming website Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur nulla erat, vel imperdiet sapien dapibus nec. Vestibulum sit amet ex eu nibh porttitor imperdiet. Nam ex lacus, aliquet nec ornare vitae, pellentesque ac ante.</p>
+                        <div class="card-img"><img src="images/sudoku.png" alt="Online Sudoku gaming website image"></div>
+                        <div class="card-description"><p class="description">Online Sudoku<br /> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur nulla erat, vel imperdiet sapien dapibus nec. Vestibulum sit amet ex eu nibh porttitor imperdiet.</p></div>
                     </div>
 
                 </div>
