styled cards: centered title & justified description text

--- a/index.html
+++ b/index.html
@@ -51,19 +51,23 @@
                 <div id="card-container">
                     <div class="card">
                         <div class="card-img"><img src="images/google.png" alt="Google Translate UI image"></div>
-                        <div class="card-description"></div><p class="description">Google Translate UI<br /> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur nulla erat, vel imperdiet sapien dapibus nec. Vestibulum sit amet ex eu nibh porttitor imperdiet. Nam ex lacus, aliquet nec ornare vitae, pellentesque ac ante.</p></div>
+                        <h3>Google Translate UI</h3>
+                        <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur nulla erat, vel imperdiet sapien dapibus nec. Vestibulum sit amet ex eu nibh porttitor imperdiet. Nam ex lacus, aliquet nec ornare vitae, pellentesque ac ante.</p>
                     </div>
                     <div class="card">
                         <div class="card-img"><img src="images/cupcake-lorem.png" alt="Cupcake Lorem Ipsum image"></div>
-                        <div class="card-description"></div><p class="description">Cupcake Lorem Ipsum<br /> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur nulla erat, vel imperdiet sapien dapibus nec. Vestibulum sit amet ex eu nibh porttitor imperdiet. Nam ex lacus, aliquet nec ornare vitae, pellentesque ac ante.</p></div>
+                        <h3>Cupcake Lorem Ipsum</h3>
+                        <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur nulla erat, vel imperdiet sapien dapibus nec. Vestibulum sit amet ex eu nibh porttitor imperdiet. Nam ex lacus, aliquet nec ornare vitae, pellentesque ac ante.</p>
                     </div>
                     <div class="card">
                         <div class="card-img"><img src="images/chatgpt.png" alt="ChatGPT Login & Signup image"></div>
-                        <div class="card-description"></div><p class="description">ChatGPT Login & Signup<br /> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur nulla erat, vel imperdiet sapien dapibus nec. Vestibulum sit amet ex eu nibh porttitor imperdiet. Nam ex lacus, aliquet nec ornare vitae, pellentesque ac ante.</p></div>
+                        <h3>ChatGPT Login & Signup</h3>
+                        <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur nulla erat, vel imperdiet sapien dapibus nec. Vestibulum sit amet ex eu nibh porttitor imperdiet. Nam ex lacus, aliquet nec ornare vitae, pellentesque ac ante.</p>
                     </div>
                     <div class="card">
                         <div class="card-img"><img src="images/sudoku.png" alt="Online Sudoku gaming website image"></div>
-                        <div class="card-description"><p class="description">Online Sudoku<br /> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur nulla erat, vel imperdiet sapien dapibus nec. Vestibulum sit amet ex eu nibh porttitor imperdiet.</p></div>
+                        <h3>Online Sudoku</h3>
+                        <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut efficitur nulla erat, vel imperdiet sapien dapibus nec. Vestibulum sit amet ex eu nibh porttitor imperdiet.</p>
                     </div>
 
                 </div>
